...
class SignUpFidoControllerViewController: UIViewController{
    
    @IBOutlet weak var emailText: UITextField!
    @IBOutlet weak var givenNameText: UITextField!
    @IBOutlet weak var familyNameText: UITextField!
    @IBOutlet weak var deviceNameText: UITextField!
    let scopes = ["openid", "email", "profile", "phone", "full_write", "offline_access"]
    
    override func viewDidLoad() {
        super.viewDidLoad()        
        AppDelegate.reachfive().initialize().onComplete { _ in }
        deviceNameText.text = UIDevice.current.name        
    }
...
